[gd_scene load_steps=5 format=3 uid="uid://b0oi0dsvs5wca"]

[ext_resource type="Script" path="res://Scripts/Button_progress_bar.gd" id="1_li4oa"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qvtqf"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j1ajx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rm7mc"]
bg_color = Color(1, 0, 0, 1)

[node name="BarreNiveauSonore" type="Node2D"]
position = Vector2(5, 50)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 600.0
offset_bottom = 50.0

[node name="Button_progress_bar" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
theme_override_constants/separation = 25
script = ExtResource("1_li4oa")

[node name="title_panel" type="Label" parent="VBoxContainer/Button_progress_bar"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Niveau sonore
"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Button_progress_bar"]
layout_mode = 2

[node name="Button_bas" type="Button" parent="VBoxContainer/Button_progress_bar/HBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "<"

[node name="Panel_progress_bar" type="Panel" parent="VBoxContainer/Button_progress_bar/HBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qvtqf")

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer/Button_progress_bar/HBoxContainer/Panel_progress_bar"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -13.5
offset_right = 2.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_j1ajx")
theme_override_styles/fill = SubResource("StyleBoxFlat_rm7mc")
step = 1.0
value = 50.0

[node name="Button_haut" type="Button" parent="VBoxContainer/Button_progress_bar/HBoxContainer"]
layout_mode = 2
text = ">
"

[connection signal="pressed" from="VBoxContainer/Button_progress_bar/HBoxContainer/Button_bas" to="VBoxContainer/Button_progress_bar" method="_on_button_bas_pressed"]
[connection signal="pressed" from="VBoxContainer/Button_progress_bar/HBoxContainer/Button_haut" to="VBoxContainer/Button_progress_bar" method="_on_button_haut_pressed"]
